- [CLUSTER] [PF] Correctly reload configurations when changing SSH/GUI access rules
- [FRONTEND] [PF] Correctly add NAT rules for Forwarders on FILE/REDIS/KAFKA-type Frontends
- [TENANT] [CONF] Ensure related Frontend configurations are reloaded when a Tenant's parameter is changed
- [GUI] [FRONTEND] Remove too strict validation for log_condition field


## [2.15.10] - 2024-08-09
### Fixed
- [API_PARSER] [NOZOMI_PROBE] Update timestamp when no logs received during last 24h
- [API_PARSER] [GATEWATCHER_ALERTS] Delayed logs gathering by 5 minutes to avoid alerts being not inserted in API when we're making our request


## [2.15.9] - 2024-07-25
### Fixed
- [API_PARSER] [HARFANGLAB] Hotfix to add a check when powershell_command object is None


## [2.15.8] - 2024-07-24
### Fixed
- [API_PARSER] [HARFANGLAB] Truncate details_powershell.PowershellCommand to 16384 char (as logs can be up to 2M)


## [2.15.7] - 2024-07-22
### Changed
- [API_PARSER] [CROWDSTRIKE] Allow to disable fetching of 'incident' logs
### Fixed
- [API_PARSER] [GATEWATCHER_ALERTS] Avoid missing logs by setting the last_api_call the timestamp of the last retrieved log
- [API_PARSER] [NOZOMI] Some alerts were not collected - because inserted after newer alerts


## [2.15.6] - 2024-07-12
### Added
- [API_PARSER] [WAF_BARRACUDA] New API parser WAF_BARRACUDA
### Fixed
- [API_PARSER] [HARFANGLAB] Handle independent saved timestamps for 'alerts' and 'threats' logs
- [API_PARSER] [PROOFPOINT_TRAP] Avoid errors on missing 'emails' field


## [2.15.5] - 2024-06-28
### Added
- [API_PARSER] [SIGNALSCIENCES_NGWAF] Add site_name key in logs
- [API_PARSER] [GATEWATCHER_ALERTS] New collector
- [API_PARSER] [CISCO_UMBRELLA] New collector
### Fixed
- [API_PARSER] [VECTRA] Correctly allow to test the Collector before saving it
- [API_PARSER] [HARFANGLAB] Increase delay to 10 minutes to be sure to get all logs
- [AUTHENTICATION] [GUI] LDAP Users can now authenticate once activated


## [2.15.4] - 2024-05-27
### Changed